--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "Violman"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "White-Violman 블로그 입니다"
-  location         : "Somewhere"
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
